[gd_scene load_steps=10 format=3 uid="uid://dxmdm1a33kluw"]

[ext_resource type="PackedScene" uid="uid://drmc1c8uavavl" path="res://scenes/characters/bases/bigkicker.tscn" id="1_37qsn"]
[ext_resource type="Script" path="res://scripts/characters/bigkick.gd" id="1_ng1di"]
[ext_resource type="AudioStream" uid="uid://g5edwu8xbrdx" path="res://src/sound/sfx/punch-41105.mp3" id="2_rb3od"]
[ext_resource type="AudioStream" uid="uid://dujd7f8hakkv1" path="res://src/sound/sfx/poison_proc.wav" id="4_q2xk4"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_f5a8b"]
radius = 1.43052
height = 10.6538

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8236w"]
radius = 0.579973
height = 10.8897

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_trbun"]
emission_shape = 1
emission_sphere_radius = 2.0
gravity = Vector3(0, 9.8, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wsn4f"]
albedo_color = Color(0.675978, 0.459498, 0.881928, 1)

[sub_resource type="SphereMesh" id="SphereMesh_qlfvp"]
material = SubResource("StandardMaterial3D_wsn4f")
radius = 0.01

[node name="Bigkick" type="CharacterBody3D" groups=["enemies_g"]]
script = ExtResource("1_ng1di")

[node name="bigkicker" parent="." instance=ExtResource("1_37qsn")]

[node name="LiveBox" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.19741, 0)
shape = SubResource("CapsuleShape3D_f5a8b")

[node name="DeathHit" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 5.0359, 0)
shape = SubResource("CapsuleShape3D_8236w")
disabled = true

[node name="HitSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_rb3od")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="." groups=["enemies_g"]]
target_desired_distance = 11.0
avoidance_enabled = true
radius = 10.0

[node name="PoisonFX" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.93997, 0)
amount = 256
speed_scale = 0.25
process_material = SubResource("ParticleProcessMaterial_trbun")
draw_pass_1 = SubResource("SphereMesh_qlfvp")

[node name="PoisonSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_q2xk4")
volume_db = 5.0

[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
